# vocacional-llm-backend

./: app.py  pyproject.toml
chroma_db/: chroma.sqlite3
scripts/: index_chroma.py
src/core/: config.py  security.py
src/models/: db.py  schemas.py
src/routers/: auth.py  chat.py
src/services/: crud.py  rag.py
